--- a/latex/chapter-appendix2.tex
+++ b/latex/chapter-appendix2.tex
@@ -1,6 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Open Source Credits}
 \index{Appendix!Open Source credits@\emph{Open Source credits}}%
+\label{appendix:credits}
 
 Speakur would not have been possible without the following open source components.
 The components listed here are the direct Bower\index{Bower} dependencies.
