--- a/latex/chapter-background.tex
+++ b/latex/chapter-background.tex
@@ -27,7 +27,7 @@ In object oriented programming, encapsulation\index{encapsulation} is typically 
 The point of encapsulation is providing an \textit{abstraction} that consumers of the functionality can rely on without knowing the internals. 
 The goals of encapsulation and abstraction include:
 \begin{quote}
-Identifying the interface of a data structure~\dots~providing \textit{information hiding} by separating implementation decisions from parts of the program that use the data 
+identifying the interface of a data structure~\dots~providing \textit{information hiding} by separating implementation decisions from parts of the program that use the data 
 structure~\dots~and allowing the data structure to be used in many different ways by many different components~\cite[p. 243]{mitchell2003}.
 \end{quote}
 
