--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -494,8 +494,8 @@ Subsidiary topics include assessing the maturity and suitability of current Web 
 \begin{vita}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
 Preston Brent Landers
-was born in Texas and attended high school on the Nevada side of Lake Tahoe. 
-He received his Bachelor of Arts in English from the University of Texas at Austin.
+was born in north Texas and attended high school on the Nevada side of Lake Tahoe. 
+He received his Bachelor of Arts in English from the University of Texas at Austin with a minor in Government.
 He works as a web and mobile software engineer for Journyx, Inc.\footnote[1]{\url{http://www.journyx.com}}
 in Austin, Texas and began graduate studies in Software Engineering at 
 the University of Texas at Austin in August 2012.
