--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -51,7 +51,7 @@ everything lives together on one big page. Hacks like the
 \index{<iframe>}
 tag let you work around some of these restrictions, usually in a limited and inelegant way.
 
-At the time of HTML's introduction the concept of quickly and easily composing a static web page, 
+At the time of HTML's introduction, the concept of quickly and easily composing a static web page, 
 much less a full-fledged dynamic application, 
 out of Lego-like reusable building blocks seemed like a distant dream at best. 
 The introduction of the 
